Favorite/Watch-Movie

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://phamanhhuy22:anhhuy2003@cluster0.m7yo2yv.mongodb.net/netflix-clone"
+NEXTAUTH_JWT_SECRET="secretjwt"
 NEXTAUTH_SECRET="somesecret"
 NEXTAUTH_URL="http://localhost:3000"
 GITHUB_ID="2f17026acface5c4739a"
