--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.0.0",
+    "@tippyjs/react": "^4.2.6",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -28,6 +29,7 @@
     "react-icons": "^4.10.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
+    "supports-color": "^8.1.1",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
