--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@tippyjs/react": "^4.2.6",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -33,7 +34,8 @@
     "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "prisma": "^5.0.0"
