--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "netflix-clone",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^1.0.1",
-    "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^5.0.0",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@tippyjs/react": "^4.2.6",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "argon2": "^0.30.3",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "next": "13.4.10",
-    "next-auth": "^4.22.3",
-    "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
-    "react-spinner": "^0.2.7",
-    "react-spinners": "^0.13.8",
-    "supports-color": "^8.1.1",
-    "swr": "^2.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "zustand": "^4.3.9"
-  },
-  "devDependencies": {
-    "prisma": "^5.0.0"
-  }
+	"name": "netflix-clone",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "prisma generate && <actual-build-command>",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@auth/prisma-adapter": "^1.0.1",
+		"@heroicons/react": "^2.0.18",
+		"@prisma/client": "^5.0.0",
+		"@radix-ui/react-dialog": "^1.0.4",
+		"@tippyjs/react": "^4.2.6",
+		"@types/node": "20.4.2",
+		"@types/react": "18.2.15",
+		"@types/react-dom": "18.2.7",
+		"argon2": "^0.30.3",
+		"autoprefixer": "10.4.14",
+		"axios": "^1.4.0",
+		"next": "13.4.10",
+		"next-auth": "^4.22.3",
+		"postcss": "8.4.26",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.45.2",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^4.10.1",
+		"react-spinner": "^0.2.7",
+		"react-spinners": "^0.13.8",
+		"supports-color": "^8.1.1",
+		"swr": "^2.2.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.1.6",
+		"zustand": "^4.3.9"
+	},
+	"devDependencies": {
+		"prisma": "^5.0.0"
+	}
 }
