--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_ID="2f17026acface5c4739a"
 GITHUB_SECRET="1c7f2f6b648b88f22714457d130a33e8ef2cc341"
 GOOGLE_ID="1032036010023-0dkag9udh2k8fdrnb67fg0nk414f7du7.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
+FACEBOOK_ID="1009839383712414"
+FACEBOOK_SECRET="9752b8f8e44ae6439a389441c60f9016"
